--- a/module-11/src/sass/components/subtitle.scss
+++ b/module-11/src/sass/components/subtitle.scss
@@ -10,7 +10,7 @@
     margin: 0 auto;
     width: 60px;
     height: 3px;
-    background-color: #f38181;
+    background-color: $subtitle-line;
     margin-top: 42px;
   }
 }
