--- a/module-11/src/sass/helpers/variables.scss
+++ b/module-11/src/sass/helpers/variables.scss
@@ -1,5 +1,25 @@
+// fonts
 $main-font:'Montserrat';
 $secondary-font:'Roboto';
 $subtitle-font:'Kaushan Script';
+
+// color site header
 $primary-color:rgb(255,255,255);
 $second-color:#333333;
+
+// color site section
+$team-color-text:#999999;
+$card-btn-bg: #fce38a;
+$card-btn-br: #f38181;
+$hover-btn-bg: #f38181;
+$hover-btn-br: #f38181;
+
+// subtitle line
+$subtitle-line:#f38181;
+
+// nav
+$hover-color:#FCE38A;
+
+// footer
+$footer-color-text:#f38181;
+$footer-color-btn:#95e1d3;
