--- a/module-11/src/sass/components/nav.scss
+++ b/module-11/src/sass/components/nav.scss
@@ -11,7 +11,7 @@
     fill: $primary-color;
   }  
   & svg:hover {
-    fill: #FCE38A;
+    fill: $hover-color;
   }
 }
 .nav__link {
@@ -27,13 +27,13 @@
     content: '';
     width: 100%;
     height: 3px;
-    background-color: #FCE38A;
+    background-color: $hover-color;
     opacity: 0;
   }
   &:hover::after {
     opacity: 1;
   }  
   &:hover {
-    color: #FCE38A;    
+    color: $hover-color;    
   }
 }
